examples/errors/duplicate_label.pigsh
# 错误：重复定义标签
label start
print hello
label start
print world
halt
